# PhoenixBios

./: PhoenixBios.rar  README.txt  click_positions.json  config.yaml  motherboards.txt  pyproject.toml
phoenixbios/: config.py  main.py  open_file.py  phoenix.py
tests/: test_phoenixbios.py
